Implementazione SELC-2325, mancano ulteriori test di integrazione
